--- a/cookieStand.html
+++ b/cookieStand.html
@@ -1,22 +1,59 @@
+
 <!DOCTYPE html>
 <head>
-  <title>Salmon Cookie!</title>
+  <title>Salmon Cookies!!</title>
+  <link href="https://fonts.googleapis.com/css?family=Baloo+Paaji" rel="stylesheet">
+  <link rel="stylesheet" href="style.css">
+</head>
 
-  <div id="logo"><a href="http://placehold.it/300x70/888888">Pat's Special Salmon Cookies</div>
+  <div id="logo">Pat's Special Salmon Cookies</div>
   <ul>
   <p>Check out our other locations</p>
-    <li><a href="">1st and Pike</a></li>
-    <li><a href="">Seatac</a></li>
-    <li><a href="">Seattle Center</a></li>
-    <li><a href="">Cap Hill</a></li>
-    <li><a href="">Alki</a></li>
+    <li><em><a href="">1st and Pike<em></a></li>
+    <li><em><a href="">Seatac</em></a></li>
+    <li><em><a href="">Seattle Center</em></a></li>
+    <li><em><a href="">Cap Hill</em></a></li>
+    <li><em><a href="">Alki</em></a></li>
   </ul>
-
 </head>
 <body>
 <div id="hero"><img src="salmon.png"></div>
 <h1>My Story</h1>
-
+  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima placeat non incidunt laborum velit animi quo temporibus consequuntur inventore tempore harum error corporis quos, repellat ea numquam, ab repudiandae consectetur</p>
+   
 <script src="app.js"></script>
 </body>
-</html>
+
+
+
+
+
+
+
+
+
+
+<!-- <!DOCTYPE html>
+<head>
+  <title>Salmon Cookie!</title>
+  <link href="https://fonts.googleapis.com/css?family=Baloo+Paaji" rel="stylesheet">
+  <link rel="stylesheet" href="style.css">
+  </head>
+  <body>
+    <div class="main">
+    <span id="logo"><img src="http://placehold.it/200x60px/">Pat's Special Salmon Cookies</span>
+    <ul>
+    <p>Check out our other locations</p>
+      <li><em><a href="">1st and Pike<em></a></li>
+      <li><em><a href="">Seatac</em></a></li>
+      <li><em><a href="">Seattle Center</em></a></li>
+        <li><em><a href="">Cap Hill</em></a></li>
+        <li><em><a href="">Alki</em></a></li>
+    </ul>
+  </div>
+  <div id="hero"><img src="salmon.png"></div>
+  <h1>My Story</h1>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima placeat non incidunt laborum velit animi quo temporibus consequuntur inventore tempore harum error corporis quos, repellat ea numquam, ab repudiandae consectetur</p>
+
+  </body>
+</html> -->
